force-app/main/default/objects/Goal__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Goal Description</description>
    <formula>&quot;Period &quot; &amp; TEXT(Period__c) &amp; &quot;, &quot; &amp; TEXT(Clock_Minute__c) &amp; &quot;:&quot; &amp; LPAD(TEXT(Clock_Second__c), 2, &#39;0&#39;) &amp; &quot;, &quot; &amp;  Scorer__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>