force-app/main/default/objects/Goal__c/fields/Scorer__c.field-meta.xml
<CustomField>
    <fullName>Scorer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scorer</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>