force-app/main/default/objects/Goal__c/fields/Scorer_Icon__c.field-meta.xml
<CustomField>
    <fullName>Scorer_Icon__c</fullName>
    <formula>IMAGE(  Scorer__r.Team__r.Icon_Link__c , &quot;Icon&quot;, 25, 25) + &quot; &quot; + Scorer__r.Name__c</formula>
    <label>Scorer Icon</label>
    <type>Text</type>
</CustomField>