force-app/main/default/objects/Goal__c/validationRules/Clock_Minute_Must_Be_0_to_7.validationRule-meta.xml
<ValidationRule>
    <fullName>Clock_Minute_Must_Be_0_to_7</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
     Clock_Minute__c  &lt; 0,
     Clock_Minute__c &gt; 7
  )</errorConditionFormula>
    <errorMessage>Clock Minute must be 0 to 7.</errorMessage>
</ValidationRule>