force-app/main/default/objects/Goal__c/validationRules/Game_Must_Be_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Game_Must_Be_In_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL( Game__r.Status__c , &quot;In Progress&quot;))</errorConditionFormula>
    <errorMessage>Game must be in progress to add or modify goals.</errorMessage>
</ValidationRule>